# mirrorface

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  integration_test.Dockerfile  next-steps  pyproject.toml
.github/workflows/: ci.yaml
helm/: Chart.yaml  values.yaml
helm/templates/: deployment.yaml  service.yaml
src/integration_tests/: __init__.py  docker_utils.py  test_utils.py
src/integration_tests/test_client/: Dockerfile  client.py
src/mirrorface/common/: hub.py  hub_test.py  storage.py  storage_test.py
src/mirrorface/server/: gunicorn.conf.py  handlers.py  main.py  metrics.py  settings.py
src/mirrorface/tools/: mirror.py
