[project]
name = "mirrorface"
version = "0.1.0"
description = "Proxy for HuggingFace Hub"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gunicorn>=23.0.0",
    "starlette>=0.45.2",
    "uvicorn>=0.34.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]
