[project]
name = "mirrorface"
version = "0.1.0"
description = "Proxy for HuggingFace Hub"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gunicorn>=23.0.0",
    "pydantic-settings>=2.7.1",
    "pydantic>=2.10.5",
    "starlette>=0.45.2",
    "uvicorn>=0.34.0",
    "aiohttp>=3.11.11",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]

[dependency-groups]
dev = [
    "pyright>=1.1.392.post0",
    "pytest>=8.3.4",
]
