[project]
name = "mirrorface"
version = "0.1.0"
description = "Proxy for HuggingFace Hub"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gunicorn>=23.0.0",
    "pydantic-settings>=2.7.1",
    "pydantic>=2.10.5",
    "starlette>=0.45.2",
    "uvicorn>=0.34.0",
    "aiohttp>=3.11.11",
    "multidict>=6.1.0",
    "huggingface-hub>=0.27.1",
    "prometheus-client>=0.21.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mirror = "mirrorface.tools.mirror:main_cli"
integration_tests = "integration_tests:run"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]

[tool.pyright]
include = ["src"]
# test_client is not executed in current uv venv, can't check it.
exclude = ["src/integration_tests/test_client/"]

[dependency-groups]
dev = [
    "docker>=7.1.0",
    "pyright>=1.1.392.post0",
    "pytest>=8.3.4",
    "termcolor>=2.5.0",
]
